--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -497,6 +497,11 @@
 	"quickstart.pending_tasks": "Ausstehende Aufgaben",
 	"quickstart.remaining_tasks": "{{num}} Verbleibende Aufgaben",
 	"quickstart.title": "Schnellstart",
+	"redirect.chrome-extension": "Weiterleitung zur Nuclia Chrome-Erweiterung…",
+	"redirect.desktop": "Weiterleitung zu Nuclia Desktop…",
+	"redirect.marketplace.error": "Die Konfiguration des Amazon Marketplace ist fehlgeschlagen",
+	"redirect.marketplace.message": "Amazon Marketplace konfigurieren…",
+	"redirect.marketplace.success": "Amazon Marketplace erfolgreich konfiguriert",
 	"reset.password": "Neues Kennwort",
 	"reset.password_reset": "Dein Passwort wurde zurück gesetzt",
 	"reset.title": "Passwort zurücksetzen",
