--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -497,6 +497,11 @@
 	"quickstart.pending_tasks": "Pending tasks",
 	"quickstart.remaining_tasks": "{{num}} Remaining tasks",
 	"quickstart.title": "Quick start",
+	"redirect.chrome-extension": "Redirecting to Nuclia Chrome extension…",
+	"redirect.desktop": "Redirecting to Nuclia Desktop…",
+	"redirect.marketplace.error": "Amazon Marketplace configuration failed",
+	"redirect.marketplace.message": "Configuring Amazon Marketplace…",
+	"redirect.marketplace.success": "Amazon Marketplace successfully configured ",
 	"reset.password": "New password",
 	"reset.password_reset": "Your password has been reset",
 	"reset.title": "Reset password",
