--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -496,6 +496,11 @@
 	"quickstart.pending_tasks": "Tareas pendientes",
 	"quickstart.remaining_tasks": "{{num}} Tareas restantes",
 	"quickstart.title": "Inicio rápido",
+	"redirect.chrome-extension": "Redirigiendo a la extensión Nuclia Chrome…",
+	"redirect.desktop": "Redirigiendo a Nuclia Desktop…",
+	"redirect.marketplace.error": "La configuración de Amazon Marketplace falló",
+	"redirect.marketplace.message": "Configurando Amazon Marketplace…",
+	"redirect.marketplace.success": "Amazon Marketplace configurado correctamente",
 	"reset.password": "Nueva contraseña",
 	"reset.password_reset": "Se ha restablecido la contraseña",
 	"reset.title": "Restablecer la contraseña",
