--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -497,6 +497,11 @@
 	"quickstart.pending_tasks": "Tarefas pendentes",
 	"quickstart.remaining_tasks": "{{num}} tarefas restantes",
 	"quickstart.title": "Começo rápido",
+	"redirect.chrome-extension": "Redirecionando para a extensão Nuclia Chrome…",
+	"redirect.desktop": "Redirecionando para Nuclia Desktop…",
+	"redirect.marketplace.error": "Falha na configuração do Amazon Marketplace",
+	"redirect.marketplace.message": "Configurando o Amazon Marketplace…",
+	"redirect.marketplace.success": "Amazon Marketplace configurado com sucesso",
 	"reset.password": "Nova senha",
 	"reset.password_reset": "Sua senha foi alterada",
 	"reset.title": "Redefinir senha",
