--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -499,9 +499,10 @@
 	"quickstart.title": "Schnellstart",
 	"redirect.chrome-extension": "Weiterleitung zur Nuclia Chrome-Erweiterung…",
 	"redirect.desktop": "Weiterleitung zu Nuclia Desktop…",
+	"redirect.marketplace.connect": "Verbinden",
 	"redirect.marketplace.error": "Die Konfiguration des Amazon Marketplace ist fehlgeschlagen",
-	"redirect.marketplace.message": "Amazon Marketplace konfigurieren…",
 	"redirect.marketplace.success": "Amazon Marketplace erfolgreich konfiguriert",
+	"redirect.marketplace.title": "Wählen Sie das Konto aus, das Sie mit Amazon Marketplace verbinden möchten",
 	"reset.password": "Neues Kennwort",
 	"reset.password_reset": "Dein Passwort wurde zurück gesetzt",
 	"reset.title": "Passwort zurücksetzen",
