--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -499,9 +499,10 @@
 	"quickstart.title": "Quick start",
 	"redirect.chrome-extension": "Redirecting to Nuclia Chrome extension…",
 	"redirect.desktop": "Redirecting to Nuclia Desktop…",
+	"redirect.marketplace.connect": "Connect",
 	"redirect.marketplace.error": "Amazon Marketplace configuration failed",
-	"redirect.marketplace.message": "Configuring Amazon Marketplace…",
 	"redirect.marketplace.success": "Amazon Marketplace successfully configured ",
+	"redirect.marketplace.title": "Select the account you want to connect to Amazon Marketplace",
 	"reset.password": "New password",
 	"reset.password_reset": "Your password has been reset",
 	"reset.title": "Reset password",
