--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -498,9 +498,10 @@
 	"quickstart.title": "Inicio rápido",
 	"redirect.chrome-extension": "Redirigiendo a la extensión Nuclia Chrome…",
 	"redirect.desktop": "Redirigiendo a Nuclia Desktop…",
+	"redirect.marketplace.connect": "Conectar",
 	"redirect.marketplace.error": "La configuración de Amazon Marketplace falló",
-	"redirect.marketplace.message": "Configurando Amazon Marketplace…",
 	"redirect.marketplace.success": "Amazon Marketplace configurado correctamente",
+	"redirect.marketplace.title": "Seleccione la cuenta que desea conectar a Amazon Marketplace",
 	"reset.password": "Nueva contraseña",
 	"reset.password_reset": "Se ha restablecido la contraseña",
 	"reset.title": "Restablecer la contraseña",
