--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -499,9 +499,10 @@
 	"quickstart.title": "Começo rápido",
 	"redirect.chrome-extension": "Redirecionando para a extensão Nuclia Chrome…",
 	"redirect.desktop": "Redirecionando para Nuclia Desktop…",
+	"redirect.marketplace.connect": "Conectar",
 	"redirect.marketplace.error": "Falha na configuração do Amazon Marketplace",
-	"redirect.marketplace.message": "Configurando o Amazon Marketplace…",
 	"redirect.marketplace.success": "Amazon Marketplace configurado com sucesso",
+	"redirect.marketplace.title": "Selecione a conta que deseja conectar ao Amazon Marketplace",
 	"reset.password": "Nova senha",
 	"reset.password_reset": "Sua senha foi alterada",
 	"reset.title": "Redefinir senha",
