callback to Amazon MarketPlace from redirect page (#1171)
* callback to Amazon MarketPlace from redirect page

* allow to select the account

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -496,6 +496,12 @@
 	"quickstart.pending_tasks": "Tareas pendientes",
 	"quickstart.remaining_tasks": "{{num}} Tareas restantes",
 	"quickstart.title": "Inicio rápido",
+	"redirect.chrome-extension": "Redirigiendo a la extensión Nuclia Chrome…",
+	"redirect.desktop": "Redirigiendo a Nuclia Desktop…",
+	"redirect.marketplace.connect": "Conectar",
+	"redirect.marketplace.error": "La configuración de Amazon Marketplace falló",
+	"redirect.marketplace.success": "Amazon Marketplace configurado correctamente",
+	"redirect.marketplace.title": "Seleccione la cuenta que desea conectar a Amazon Marketplace",
 	"reset.password": "Nueva contraseña",
 	"reset.password_reset": "Se ha restablecido la contraseña",
 	"reset.title": "Restablecer la contraseña",
