--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -497,6 +497,12 @@
 	"quickstart.pending_tasks": "Tâches en attente",
 	"quickstart.remaining_tasks": "{{num}} tâches restantes",
 	"quickstart.title": "Démarrage rapide",
+	"redirect.chrome-extension": "Redirection vers l'extension Nuclia Chrome…",
+	"redirect.desktop": "Redirection vers Nuclia Desktop…",
+	"redirect.marketplace.connect": "Connecter",
+	"redirect.marketplace.error": "Échec de la configuration d'Amazon Marketplace",
+	"redirect.marketplace.success": "Amazon Marketplace configuré avec succès",
+	"redirect.marketplace.title": "Sélectionnez le compte que vous souhaitez connecter à Amazon Marketplace",
 	"reset.password": "Nouveau mot de passe",
 	"reset.password_reset": "Votre mot de passe a été réinitialisé",
 	"reset.title": "Réinitialiser le mot de passe",
