--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -496,6 +496,12 @@
 	"quickstart.pending_tasks": "Tasques pendents",
 	"quickstart.remaining_tasks": "{{num}} Tasques restants",
 	"quickstart.title": "Inici ràpid",
+	"redirect.chrome-extension": "S'està redirigint a l'extensió Nuclia Chrome...",
+	"redirect.desktop": "S'està redirigint a Nuclia Desktop...",
+	"redirect.marketplace.connect": "Connectar",
+	"redirect.marketplace.error": "La configuració d'Amazon Marketplace ha fallat",
+	"redirect.marketplace.success": "Amazon Marketplace s'ha configurat correctament",
+	"redirect.marketplace.title": "Seleccioneu el compte que voleu connectar a Amazon Marketplace",
 	"reset.password": "Nova contrasenya",
 	"reset.password_reset": "S'ha restaurat la contrasenya",
 	"reset.title": "Restablir la contrasenya",
