[sc-7722] new onboarding + getting started flow  (#1169)
* Update copy and translation keys on signup

* [sc-7722] New onboarding flow

  - New wording on sign-up and first questions
  - Refactor onboarding in several steps
  - Update zone service to optionally return zones not available yet
  - Don't display "create account" and "manage account" options at the same time in the user menu
  - Update sistema default border radius to be 0 as in figma (impacting mainly checkboxes and popups)

* Getting started modal

  - New `getting-started` modal with one component by step (intro, upload, processing)
  - Create `upload.utils.ts` with some upload utility methods like `getFilesByType`, `getFilesGroupedByType`
  - Refactor uploadService:
     - we can now use its uploadFiles method without triggering any toast
     - new method `checkFileTypesAndConfirm` for warnings about spreadsheet and archive uploads
  - Move progress-bar component to sistema

* Fix unit tests

* Use GETTING_STARTED_DONE flag to display getting started modal

  - fix `getIncrementedSlug` method to increment only the counter and not the separator.
  - replace query param to display getting started by a flag
  - remove import dataset section from resource list page
  - remove usage of `NUCLIA_UPLOAD_DONE` and `isKbStillEmptyAfterFirstDay` as `showKBEmptyAlert` is replaced by this new Getting started flow

* Fix unit tests

--- a/libs/user/src/assets/i18n/ca.json
+++ b/libs/user/src/assets/i18n/ca.json
@@ -4,7 +4,6 @@
 	"generic.logout": "Sortir",
 	"generic.or": "O",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
-	"login.boarding_title": "Embarcament a Nuclia",
 	"login.check_email.check_spams": "o comproveu la vostra carpeta de correu brossa.",
 	"login.check_email.details": "Feu clic a l'enllaç d'activació que us acabem d'enviar a <strong>{{ email }}</strong>. ",
 	"login.check_email.email_sent": "T’hem enviat un mail! :)",
@@ -15,9 +14,6 @@
 	"login.description": "Coneix el què la teva empresa sap",
 	"login.dont_see": "No ho veus?",
 	"login.email": "Correu electrònic",
-	"login.email_already_exists": "Ja existeix un usuari registrat amb aquest correu electrònic",
-	"login.email_signup": "Correu electrònic professional",
-	"login.email_signup_help": "Camp necessari. Només es permeten les adreces de correu electrònic de l'empresa.",
 	"login.error.auth_error": "Error d'autentificació.",
 	"login.error.get_consent_error": "S'ha produït un error a l'obtenir la informació de consentiment",
 	"login.error.google_workspace": "El registre amb Google està restringit als dominis de l'espai de treball, ho sento.",
@@ -30,56 +26,88 @@
 	"login.full_name": "Nom complert",
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "No tens un compte?",
-	"login.have_account_already": "Ja tens un compte?",
 	"login.login": "Accedir",
 	"login.password": "Contrasenya",
 	"login.recover": "Recuperar contrasenya",
 	"login.recover_help": "Problemes amb la paraula de pas?",
 	"login.scope.kbs_read": "Accedir a les teves caixes de coneixement",
 	"login.scope.kbs_write": "Modificar les teves caixes de coneixement",
-	"login.sign-up-with": "Registra't amb {{provider}}",
-	"login.signup": "Registra't!",
 	"login.subtitle": "Oferint les respostes adequades a partir de les vostres dades internes.",
 	"login.title": "Benvinguts a Nuclia",
 	"login.token_expired": "El testimoni ha caducat",
 	"login.try_again": "Torna-ho a intentar o recupera la contrasenya.",
-	"onboarding.account_creation": "Creació del compte...",
-	"onboarding.company": "Per a quina empresa treballes?",
-	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
-	"onboarding.get_started": "Començar",
-	"onboarding.host_db": "Voleu allotjar la base de dades a la vostra infraestructura?",
-	"onboarding.host_db_help": "Camp necessari. Això no afecta la vostra experiència d'usuari.",
-	"onboarding.host_db_no": "No, prefereixo utilitzar el núvol de Nuclia",
-	"onboarding.host_db_yes": "Sí, allotjaré NucliaDB a la meva infraestructura",
-	"onboarding.invalid_phone_code": "Codi invàlid",
-	"onboarding.invalid_phone_number": "Número de telèfon no vàlid",
-	"onboarding.kb_creation": "Creació d'emmagatzematge...",
-	"onboarding.org_size": "Quina mida és la teva organització?",
-	"onboarding.phone": "Número de telèfon",
-	"onboarding.setting_up": "⏳ ​ Estem configurant el teu compte",
-	"onboarding.setting_up_subtitle": "El vostre compte estarà llest en menys d'un minut!",
-	"onboarding.storage_zone": "Les teves dades seran allotjades a Europa. Si voleu que les vostres dades s'allotgin en un altre lloc, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">ompliu aquest formulari</a>.",
-	"onboarding.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
-	"onboarding.title": "👋​ Benvinguts a Nuclia!",
-	"onboarding.updates": "Obteniu actualitzacions ocasionals sobre Nuclia",
-	"onboarding.use_case.ai_training": "Entrenament del model d'IA",
-	"onboarding.use_case.global_search": "Cerca global de llocs",
-	"onboarding.use_case.other": "Un altre",
-	"onboarding.use_case.research_analysis": "Recerca i anàlisi",
-	"onboarding.use_case.support": "Suport al client/empleat",
-	"onboarding.use_case.workspace_search": "Cerca d'espais de treball",
-	"onboarding.use_case_label": "Quin és el vostre cas d'ús principal?",
+	"onboarding.next-button": "Pròxim",
+	"onboarding.setting-up.account_creation": "Creació del compte...",
+	"onboarding.setting-up.import_dataset": "S'està important el vostre conjunt de dades...",
+	"onboarding.setting-up.kb_creation": "Creació d'emmagatzematge...",
+	"onboarding.setting-up-dataset.import-failed": "La importació del conjunt de dades ha fallat, però no us preocupeu, podreu tornar a importar un conjunt de dades al pas següent",
+	"onboarding.setting-up-dataset.subtitle": "Estaràs preparat per a la teva primera cerca en menys d'un minut!",
+	"onboarding.setting-up-dataset.title": "Estem configurant el teu compte",
+	"onboarding.setting-up-upload.subtitle": "Carregueu les vostres dades al següent pas i, un cop processades, estaràs preparat per a la teva primera cerca.",
+	"onboarding.setting-up-upload.title": "Preparem-nos per importar les vostres dades",
+	"onboarding.step1.company": "Nom de la companyia",
+	"onboarding.step1.host_db.help": "Camp necessari. Això no afecta la vostra experiència d'usuari.",
+	"onboarding.step1.host_db.label": "Voleu allotjar la base de dades a la vostra infraestructura?",
+	"onboarding.step1.host_db.no": "No, prefereixo utilitzar el núvol de Nuclia",
+	"onboarding.step1.host_db.yes": "Sí, allotjaré NucliaDB a la meva infraestructura",
+	"onboarding.step1.invalid_phone_code": "Codi invàlid",
+	"onboarding.step1.invalid_phone_number": "Número de telèfon no vàlid",
+	"onboarding.step1.org_size": "Quina és la mida de la teva empresa?",
+	"onboarding.step1.phone": "Número de telèfon",
+	"onboarding.step1.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
+	"onboarding.step1.title": "Benvinguts a Nuclia! 👋​ ",
+	"onboarding.step1.updates": "Obteniu actualitzacions ocasionals sobre Nuclia",
+	"onboarding.step1.use_case.ai_training": "Entrenament del model d'IA",
+	"onboarding.step1.use_case.global_search": "Cerca global de llocs",
+	"onboarding.step1.use_case.label": "Quin és el vostre cas d'ús principal?",
+	"onboarding.step1.use_case.other": "Un altre",
+	"onboarding.step1.use_case.research_analysis": "Recerca i anàlisi",
+	"onboarding.step1.use_case.support": "Suport al client/empleat",
+	"onboarding.step1.use_case.workspace_search": "Cerca d'espais de treball",
+	"onboarding.step2.coming-soon": "(disponible aviat)",
+	"onboarding.step2.consent": "En utilitzar Nuclia, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
+	"onboarding.step2.languages.arabic": "Àrab",
+	"onboarding.step2.languages.catalan": "Català",
+	"onboarding.step2.languages.chinese": "Xinès",
+	"onboarding.step2.languages.danish": "Danès",
+	"onboarding.step2.languages.english": "Anglès",
+	"onboarding.step2.languages.finnish": "Finès",
+	"onboarding.step2.languages.french": "Francès",
+	"onboarding.step2.languages.german": "Alemany",
+	"onboarding.step2.languages.italian": "Itàlia",
+	"onboarding.step2.languages.japanese": "Japonesa",
+	"onboarding.step2.languages.label": "Seleccioneu els idiomes que fan servir la majoria de les vostres dades i contingut",
+	"onboarding.step2.languages.multilingual": "Multilingüe",
+	"onboarding.step2.languages.norwegian": "Noruec",
+	"onboarding.step2.languages.other": "Un altre",
+	"onboarding.step2.languages.portuguese": "Portuguès",
+	"onboarding.step2.languages.spanish": "Espanyol",
+	"onboarding.step2.languages.swedish": "Suec",
+	"onboarding.step2.region-label": "Seleccioneu una regió per allotjar les vostres dades de cerca",
+	"onboarding.step2.starting-data.dataset": "Utilitzeu un conjunt de dades de mostra",
+	"onboarding.step2.starting-data.dataset-label": "Seleccioneu el conjunt de dades de mostra",
+	"onboarding.step2.starting-data.label": "Com vols començar?",
+	"onboarding.step2.starting-data.upload": "Pujar les meves pròpies dades",
+	"onboarding.step2.subtitle": "Establiu aquests paràmetres per personalitzar el vostre compte",
+	"onboarding.step2.title": "Anem a configurar-te",
 	"recover.description": "Escriu la teva direcció electrònica i segueix les indicacions per a recuperar la contrasenya ",
 	"recover.gologin": "Vés a la pàgina de login",
 	"recover.gologin_help": "Has recordat la teva contrasenya?",
 	"recover.recover": "Recuperar",
 	"recover.title": "Recupera la contrasenya",
 	"recover.verify": "Verifica el compte per canviar la contrasenya",
+	"signup.email.already_exists": "Ja existeix un usuari registrat amb aquest correu electrònic",
+	"signup.email.help": "Camp necessari. Només es permeten les adreces de correu electrònic de l'empresa.",
+	"signup.have_account_already": "Ja tens un compte?",
+	"signup.name": "Nom",
+	"signup.sign-up-with": "Registra't amb {{provider}}",
+	"signup.signup-button-label": "Registra't!",
+	"signup.title": "Comença gratuïtament",
 	"validation.company-email": "Si us plau, utilitzeu un correu electrònic de l'empresa",
 	"validation.email": "Introdueix un correu electrònic vàlid",
 	"validation.password_minlength": "La contrasenya ha de tenir com a mínim 8 caràcters",
 	"validation.password_mismatch": "Ep! La contrasenya no coincideix",
 	"validation.password_required": "Escull una contrasenya",
-	"validation.required": "Aquest camp és obligatori",
+	"validation.required": "Camp necessari",
 	"validation.required_short": "Obligatori"
 }
