--- a/libs/user/src/assets/i18n/de.json
+++ b/libs/user/src/assets/i18n/de.json
@@ -4,7 +4,6 @@
 	"generic.logout": "Ausloggen",
 	"generic.or": "ODER",
 	"login.access_request": "möchte in Ihrem Namen auf Nuclia zugreifen und Folgendes tun können:",
-	"login.boarding_title": "Einsteigen in Nuclia",
 	"login.check_email.check_spams": "oder schauen Sie in Ihrem Spam-Ordner nach.",
 	"login.check_email.details": "Klicken Sie auf den Aktivierungslink, den wir Ihnen gerade an <strong>{{ email }}</strong>gesendet haben. ",
 	"login.check_email.email_sent": "Wir haben Ihnen eine E-Mail geschickt!",
@@ -15,9 +14,6 @@
 	"login.description": "Wissen Sie, was Ihr Unternehmen weiß",
 	"login.dont_see": "Siehst du es nicht?",
 	"login.email": "Email",
-	"login.email_already_exists": "Diese Emailadresse existiert bereits!",
-	"login.email_signup": "Professionelle E-Mail",
-	"login.email_signup_help": "Pflichtfeld. Nur Firmen-E-Mail-Adressen zulässig.",
 	"login.error.auth_error": "Authentifizierungsfehler.",
 	"login.error.get_consent_error": "Beim Abrufen der Einwilligungsinformationen ist ein Fehler aufgetreten",
 	"login.error.google_workspace": "Die Anmeldung bei Google ist leider auf Workspace-Domains beschränkt.",
@@ -30,51 +26,83 @@
 	"login.full_name": "Vollständiger Name",
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "Sie haben noch kein Konto?",
-	"login.have_account_already": "Hast du schon ein Konto?",
 	"login.login": "Einloggen",
 	"login.password": "Passwort",
 	"login.recover": "Passwort wiederherstellen",
 	"login.recover_help": "Probleme beim Einloggen?",
 	"login.scope.kbs_read": "Sehen Sie sich Ihre Wissensboxen an",
 	"login.scope.kbs_write": "Ändern Sie Ihre Wissensboxen",
-	"login.sign-up-with": "Mit {{provider}} anmelden",
-	"login.signup": "Anmelden",
 	"login.subtitle": "Aus Ihren internen Daten die richtigen Antworten liefern.",
 	"login.title": "Willkommen in Nuclia",
 	"login.token_expired": "Token ist abgelaufen",
 	"login.try_again": "Bitte versuchen Sie es erneut oder setzen Sie Ihr Passwort unten zurück.",
-	"onboarding.account_creation": "Konto-Erstellung…",
-	"onboarding.company": "Für welches Unternehmen arbeiten Sie?",
-	"onboarding.consent": "Durch die Nutzung dieses Produkts akzeptieren Sie die <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Allgemeinen Geschäftsbedingungen</a> und die <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Datenschutzerklärung</a>.",
-	"onboarding.get_started": "Loslegen",
-	"onboarding.host_db": "Möchten Sie die Datenbank in Ihrer Infrastruktur hosten?",
-	"onboarding.host_db_help": "Pflichtfeld. Dies hat keinen Einfluss auf das Benutzererlebnis.",
-	"onboarding.host_db_no": "Nein, ich nutze lieber die Cloud von Nuclia",
-	"onboarding.host_db_yes": "Ja, ich werde NucliaDB in meiner Infrastruktur hosten",
-	"onboarding.invalid_phone_code": "Ungültiger Code",
-	"onboarding.invalid_phone_number": "Ungültige Telefonnummer",
-	"onboarding.kb_creation": "Speichererstellung…",
-	"onboarding.org_size": "Wie groß ist Ihre Organisation?",
-	"onboarding.phone": "Telefonnummer",
-	"onboarding.setting_up": "⏳ ​ Wir richten Ihr Konto ein",
-	"onboarding.setting_up_subtitle": "Ihr Konto ist in weniger als einer Minute fertig!",
-	"onboarding.storage_zone": "Ihre Daten werden in Europa gehostet. Wenn Sie möchten, dass Ihre Daten an anderer Stelle gehostet werden, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">füllen Sie dieses Formular aus</a>.",
-	"onboarding.subtitle": "Ein paar kurze Fragen und schon können Sie loslegen.",
-	"onboarding.title": "👋​ Willkommen in Nuclia!",
-	"onboarding.updates": "Erhalten Sie gelegentlich Updates über Nuclia",
-	"onboarding.use_case.ai_training": "KI-Modelltraining",
-	"onboarding.use_case.global_search": "Globale Site-Suche",
-	"onboarding.use_case.other": "Andere",
-	"onboarding.use_case.research_analysis": "Forschung und Analyse",
-	"onboarding.use_case.support": "Kunden-/Mitarbeiterbetreuung",
-	"onboarding.use_case.workspace_search": "Arbeitsbereichssuche",
-	"onboarding.use_case_label": "Was ist Ihr Hauptanwendungsfall?",
+	"onboarding.next-button": "Nächster",
+	"onboarding.setting-up.account_creation": "Konto-Erstellung…",
+	"onboarding.setting-up.import_dataset": "Importieren Ihres Datensatzes...",
+	"onboarding.setting-up.kb_creation": "Speichererstellung…",
+	"onboarding.setting-up-dataset.import-failed": "Der Import des Datensatzes ist fehlgeschlagen, aber keine Sorge, Sie können den Datensatz im nächsten Schritt erneut importieren",
+	"onboarding.setting-up-dataset.subtitle": "In weniger als einer Minute sind Sie für Ihre erste Suche bereit!",
+	"onboarding.setting-up-dataset.title": "Wir richten Ihr Konto ein",
+	"onboarding.setting-up-upload.subtitle": "Laden Sie im nächsten Schritt Ihre Daten hoch und nach der Verarbeitung sind Sie für Ihre erste Suche bereit.",
+	"onboarding.setting-up-upload.title": "Machen wir uns bereit für den Import Ihrer Daten",
+	"onboarding.step1.company": "Name der Firma",
+	"onboarding.step1.host_db.help": "Pflichtfeld. Dies hat keinen Einfluss auf das Benutzererlebnis.",
+	"onboarding.step1.host_db.label": "Möchten Sie die Datenbank in Ihrer Infrastruktur hosten?",
+	"onboarding.step1.host_db.no": "Nein, ich nutze lieber die Cloud von Nuclia",
+	"onboarding.step1.host_db.yes": "Ja, ich werde NucliaDB in meiner Infrastruktur hosten",
+	"onboarding.step1.invalid_phone_code": "Ungültiger Code",
+	"onboarding.step1.invalid_phone_number": "Ungültige Telefonnummer",
+	"onboarding.step1.org_size": "Wie groß ist Ihr Unternehmen?",
+	"onboarding.step1.phone": "Telefonnummer",
+	"onboarding.step1.subtitle": "Ein paar kurze Fragen und schon können Sie loslegen.",
+	"onboarding.step1.title": "Willkommen in Nuclia! 👋​ ",
+	"onboarding.step1.updates": "Erhalten Sie gelegentlich Updates über Nuclia",
+	"onboarding.step1.use_case.ai_training": "KI-Modelltraining",
+	"onboarding.step1.use_case.global_search": "Globale Site-Suche",
+	"onboarding.step1.use_case.label": "Was ist Ihr Hauptanwendungsfall?",
+	"onboarding.step1.use_case.other": "Andere",
+	"onboarding.step1.use_case.research_analysis": "Forschung und Analyse",
+	"onboarding.step1.use_case.support": "Kunden-/Mitarbeiterbetreuung",
+	"onboarding.step1.use_case.workspace_search": "Arbeitsbereichssuche",
+	"onboarding.step2.coming-soon": "(bald erhältlich)",
+	"onboarding.step2.consent": "Durch die Nutzung von Nuclia akzeptieren Sie die <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Allgemeinen Geschäftsbedingungen</a> und die <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Datenschutzerklärung</a>.",
+	"onboarding.step2.languages.arabic": "Arabisch",
+	"onboarding.step2.languages.catalan": "Katalanisch",
+	"onboarding.step2.languages.chinese": "Chinesisch",
+	"onboarding.step2.languages.danish": "Dänisch",
+	"onboarding.step2.languages.english": "Englisch",
+	"onboarding.step2.languages.finnish": "Finnisch",
+	"onboarding.step2.languages.french": "Französisch",
+	"onboarding.step2.languages.german": "Deutsche",
+	"onboarding.step2.languages.italian": "Italienisch",
+	"onboarding.step2.languages.japanese": "Japanisch",
+	"onboarding.step2.languages.label": "Wählen Sie die Sprache(n) aus, die die meisten Ihrer Daten und Inhalte verwenden",
+	"onboarding.step2.languages.multilingual": "Mehrsprachig",
+	"onboarding.step2.languages.norwegian": "Norwegisch",
+	"onboarding.step2.languages.other": "Andere",
+	"onboarding.step2.languages.portuguese": "Portugiesisch",
+	"onboarding.step2.languages.spanish": "Spanisch",
+	"onboarding.step2.languages.swedish": "Schwedisch",
+	"onboarding.step2.region-label": "Wählen Sie eine Region zum Hosten Ihrer Suchdaten aus",
+	"onboarding.step2.starting-data.dataset": "Verwenden Sie einen Beispieldatensatz",
+	"onboarding.step2.starting-data.dataset-label": "Beispieldatensatz auswählen",
+	"onboarding.step2.starting-data.label": "Wie möchten Sie beginnen?",
+	"onboarding.step2.starting-data.upload": "Laden Sie meine eigenen Daten hoch",
+	"onboarding.step2.subtitle": "Legen Sie diese Parameter fest, um Ihr Konto anzupassen",
+	"onboarding.step2.title": "Wir bereiten Sie vor",
 	"recover.description": "Passwort vergessen? Lasst uns das beheben. Geben Sie einfach die E-Mail-Adresse ein, mit der Sie sich registriert haben, und wir starten den Wiederherstellungsvorgang.",
 	"recover.gologin": "Gehen Sie zur Anmeldeseite",
 	"recover.gologin_help": "Erinnern Sie sich an Ihr Passwort?",
 	"recover.recover": "Genesen",
 	"recover.title": "ERHALTEN SIE IHR PASSWORT",
 	"recover.verify": "Überprüfen Sie Ihre E-Mails und verwenden Sie den bereitgestellten Link, um Ihr Passwort zu ändern",
+	"signup.email.already_exists": "Diese Emailadresse existiert bereits!",
+	"signup.email.help": "Pflichtfeld. Nur Firmen-E-Mail-Adressen zulässig.",
+	"signup.have_account_already": "Hast du schon ein Konto?",
+	"signup.name": "Name",
+	"signup.sign-up-with": "Mit {{provider}} anmelden",
+	"signup.signup-button-label": "Anmelden",
+	"signup.title": "Kostenlos loslegen",
 	"validation.company-email": "Bitte verwenden Sie eine Firmen-E-Mail",
 	"validation.email": "Geben Sie eine gültige E-Mail-Adresse ein",
 	"validation.password_minlength": "Das Passwort muss mindestens 8 Zeichen lang sein",
