--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -4,7 +4,6 @@
 	"generic.logout": "Déconnexion",
 	"generic.or": "Ou",
 	"login.access_request": "souhaite accéder à Nuclia en votre nom et être en mesure de :",
-	"login.boarding_title": "Embarquer avec Nuclia",
 	"login.check_email.check_spams": "ou vérifiez vos courriers indésirables.",
 	"login.check_email.details": "Cliquez sur le lien d'activation que nous venons de vous envoyer à <strong>{{ email }}</strong>. ",
 	"login.check_email.email_sent": "On vous a envoyé un email!",
@@ -15,9 +14,6 @@
 	"login.description": "Savoir ce que votre entreprise sait",
 	"login.dont_see": "Vous ne le voyez pas ?",
 	"login.email": "Email",
-	"login.email_already_exists": "Cet email existe déjà!",
-	"login.email_signup": "Email professionnel",
-	"login.email_signup_help": "Champ requis. Seules les adresses e-mail d'entreprise sont autorisées.",
 	"login.error.auth_error": "Erreur d'authentification.",
 	"login.error.get_consent_error": "Une erreur s'est produite lors de la récupération des informations relatives au consentement",
 	"login.error.google_workspace": "L'inscription avec Google est limitée aux domaines professionnels, désolé.",
@@ -30,56 +26,88 @@
 	"login.full_name": "Nom complet",
 	"login.google-workspace": "Google Workspace",
 	"login.have_account": "Vous n’avez pas de compte ?",
-	"login.have_account_already": "Vous avez déjà un compte ?",
 	"login.login": "Se connecter",
 	"login.password": "Mot de passe",
 	"login.recover": "Récupérer mon mot de passe",
 	"login.recover_help": "Problèmes de connexion ?",
 	"login.scope.kbs_read": "Consulter vos boîtes à savoir",
 	"login.scope.kbs_write": "Modifier vos Boîtes à savoir",
-	"login.sign-up-with": "S'inscrire avec {{provider}}",
-	"login.signup": "S'inscrire",
 	"login.subtitle": "Fournir les bonnes réponses à partir de vos données internes.",
 	"login.title": "Bienvenue à Nuclia",
 	"login.token_expired": "Le jeton a expiré",
 	"login.try_again": "Veuillez réessayer ou réinitialiser votre mot de passe ci-dessous.",
-	"onboarding.account_creation": "Création du compte...",
-	"onboarding.company": "Pour quelle entreprise travaillez-vous ?",
-	"onboarding.consent": "En utilisant ce produit, vous acceptez les <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">termes et conditions</a> et <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">politique de confidentialité</a>.",
-	"onboarding.get_started": "Commencer",
-	"onboarding.host_db": "Souhaitez-vous héberger la base de données dans votre infrastructure ?",
-	"onboarding.host_db_help": "Champs requis. Cela n'affecte pas l'expérience de vos utilisateurs.",
-	"onboarding.host_db_no": "Non, je préfère utiliser le cloud de Nuclia",
-	"onboarding.host_db_yes": "Oui, j'hébergerai NucliaDB dans mon infrastructure",
-	"onboarding.invalid_phone_code": "Code invalide",
-	"onboarding.invalid_phone_number": "Numéro de téléphone invalide",
-	"onboarding.kb_creation": "Création du stockage…",
-	"onboarding.org_size": "Quelle est la taille de votre organisation ?",
-	"onboarding.phone": "Numéro de téléphone",
-	"onboarding.setting_up": "⏳ ​ Nous configurons votre compte",
-	"onboarding.setting_up_subtitle": "Votre compte sera prêt en moins d'une minute !",
-	"onboarding.storage_zone": "Vos données seront hébergées en Europe. Si vous souhaitez que vos données soient hébergées ailleurs, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">remplissez ce formulaire</a>.",
-	"onboarding.subtitle": "Quelques questions rapides, et nous allons commencer.",
-	"onboarding.title": "👋​ Bienvenue sur Nuclia !",
-	"onboarding.updates": "Recevoir des mises à jour occasionnelles sur Nuclia",
-	"onboarding.use_case.ai_training": "Formation de modèles d'IA",
-	"onboarding.use_case.global_search": "Recherche globale de sites",
-	"onboarding.use_case.other": "Autres",
-	"onboarding.use_case.research_analysis": "Recherche et analyse",
-	"onboarding.use_case.support": "Soutien aux clients / employés",
-	"onboarding.use_case.workspace_search": "Recherche d'espace de travail",
-	"onboarding.use_case_label": "Quel est votre cas d'utilisation principal ?",
+	"onboarding.next-button": "Suivant",
+	"onboarding.setting-up.account_creation": "Création du compte...",
+	"onboarding.setting-up.import_dataset": "Import de votre jeu de données...",
+	"onboarding.setting-up.kb_creation": "Création du stockage…",
+	"onboarding.setting-up-dataset.import-failed": "L'import du jeu de données a échoué, mais ne vous inquiétez pas, vous pourrez réimporter un jeu de données à l'étape suivante.",
+	"onboarding.setting-up-dataset.subtitle": "Vous serez prêt pour votre première recherche en moins d’une minute !",
+	"onboarding.setting-up-dataset.title": "Et maintenant, laissons la magie agir…",
+	"onboarding.setting-up-upload.subtitle": "Téléchargez vos données à l'étape suivante et une fois traitées, vous serez prêt pour votre première recherche.",
+	"onboarding.setting-up-upload.title": "Nous nous préparons à importer vos données",
+	"onboarding.step1.company": "Nom de l'entreprise",
+	"onboarding.step1.host_db.help": "Champs requis. Cela n'affecte pas l'expérience de vos utilisateurs.",
+	"onboarding.step1.host_db.label": "Souhaitez-vous héberger la base de données dans votre infrastructure ?",
+	"onboarding.step1.host_db.no": "Non, je préfère utiliser le cloud de Nuclia",
+	"onboarding.step1.host_db.yes": "Oui, j'hébergerai NucliaDB dans mon infrastructure",
+	"onboarding.step1.invalid_phone_code": "Code invalide",
+	"onboarding.step1.invalid_phone_number": "Numéro de téléphone invalide",
+	"onboarding.step1.org_size": "Quelle est la taille de votre entreprise ?",
+	"onboarding.step1.phone": "Numéro de téléphone",
+	"onboarding.step1.subtitle": "Quelques questions rapides, et nous allons commencer.",
+	"onboarding.step1.title": "Bienvenue sur Nuclia ! 👋​ ",
+	"onboarding.step1.updates": "Recevoir des mises à jour occasionnelles sur Nuclia",
+	"onboarding.step1.use_case.ai_training": "Formation de modèles d'IA",
+	"onboarding.step1.use_case.global_search": "Recherche globale de sites",
+	"onboarding.step1.use_case.label": "Quel est votre cas d'utilisation principal ?",
+	"onboarding.step1.use_case.other": "Autres",
+	"onboarding.step1.use_case.research_analysis": "Recherche et analyse",
+	"onboarding.step1.use_case.support": "Soutien aux clients / employés",
+	"onboarding.step1.use_case.workspace_search": "Recherche d'espace de travail",
+	"onboarding.step2.coming-soon": "(bientôt disponible)",
+	"onboarding.step2.consent": "En utilisant Nuclia, vous acceptez les <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Conditions générales</a> et les <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Politique de confidentialité</a>.",
+	"onboarding.step2.languages.arabic": "Arabe",
+	"onboarding.step2.languages.catalan": "Catalan",
+	"onboarding.step2.languages.chinese": "Chinois",
+	"onboarding.step2.languages.danish": "Danois",
+	"onboarding.step2.languages.english": "Anglais",
+	"onboarding.step2.languages.finnish": "Finlandais",
+	"onboarding.step2.languages.french": "Français",
+	"onboarding.step2.languages.german": "Allemand",
+	"onboarding.step2.languages.italian": "Italien",
+	"onboarding.step2.languages.japanese": "Japonais",
+	"onboarding.step2.languages.label": "Sélectionnez la ou les langues utilisées par la plupart de vos données et contenus.",
+	"onboarding.step2.languages.multilingual": "Multilingue",
+	"onboarding.step2.languages.norwegian": "Norvégien",
+	"onboarding.step2.languages.other": "Autre",
+	"onboarding.step2.languages.portuguese": "Portugais",
+	"onboarding.step2.languages.spanish": "Espagnol",
+	"onboarding.step2.languages.swedish": "Suédois",
+	"onboarding.step2.region-label": "Sélectionnez une région pour héberger vos données de recherche",
+	"onboarding.step2.starting-data.dataset": "Utiliser un jeu de données d'exemple",
+	"onboarding.step2.starting-data.dataset-label": "Sélectionner jeu de données",
+	"onboarding.step2.starting-data.label": "Comment voulez-vous commencer ?",
+	"onboarding.step2.starting-data.upload": "Télécharger mes propres données",
+	"onboarding.step2.subtitle": "Définissez ces paramètres pour personnaliser votre compte",
+	"onboarding.step2.title": "Laissez-nous vous installer",
 	"recover.description": "Vous avez perdu votre mot de passe ? Nous allons y remédier. Saisissez l'adresse électronique avec laquelle vous vous êtes enregistré et nous lancerons la procédure de récupération.",
 	"recover.gologin": "Aller à la page de connexion",
 	"recover.gologin_help": "Vous vous rappelez de votre mot de passe ?",
 	"recover.recover": "Récupérer",
 	"recover.title": "Récupérer votre mot de passe",
 	"recover.verify": "Vérifiez votre email et utilisez le lien fourni pour modifier votre mot de passe.",
+	"signup.email.already_exists": "Cet email existe déjà!",
+	"signup.email.help": "Champ requis. Seules les adresses e-mail d'entreprise sont autorisées.",
+	"signup.have_account_already": "Vous avez déjà un compte ?",
+	"signup.name": "Nom",
+	"signup.sign-up-with": "S'inscrire avec {{provider}}",
+	"signup.signup-button-label": "S'inscrire",
+	"signup.title": "Commencez gratuitement",
 	"validation.company-email": "Veuillez utiliser un email d’entreprise",
 	"validation.email": "Saisir un email valide",
 	"validation.password_minlength": "Le mot de passe doit comporter au moins 8 caractères",
 	"validation.password_mismatch": "Le mot de passe ne correspond pas",
 	"validation.password_required": "Choisissez un mot de passe",
-	"validation.required": "Champs obligatoire",
+	"validation.required": "Champs requis",
 	"validation.required_short": "Requis"
 }
