[sc-7995] Add the version in the LLM used

--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -681,12 +681,12 @@
 	"stash.config.key.azure_openai": "Azure OpenAI-Schlüssel",
 	"stash.config.key.openai": "OpenAI-Schlüssel",
 	"stash.config.option.anthropic": "Anthropic Claude",
-	"stash.config.option.chatgpt": "OpenAI ChatGPT",
-	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT",
+	"stash.config.option.chatgpt": "OpenAI ChatGPT-3.5",
+	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
 	"stash.config.option.cohere": "Cohere Command (Beta)",
 	"stash.config.option.disabled": "Deaktiviert",
 	"stash.config.option.enabled": "Aktiviert",
-	"stash.config.option.generative-multilingual-2023": "Mehrsprachiges Privatmodell von Nuclia",
+	"stash.config.option.generative-multilingual-2023": "No-Generation-Modus",
 	"stash.config.option.multilingual-2023-08-16": "mehrsprachig (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
 	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
