--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -681,12 +681,12 @@
 	"stash.config.key.azure_openai": "Clé Azure OpenAI",
 	"stash.config.key.openai": "Clé OpenAI",
 	"stash.config.option.anthropic": "Anthropic Claude",
-	"stash.config.option.chatgpt": "OpenAI ChatGPT",
-	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT",
+	"stash.config.option.chatgpt": "OpenAI ChatGPT-3.5",
+	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
 	"stash.config.option.cohere": "Cohere Command (beta)",
 	"stash.config.option.disabled": "Désactivé",
 	"stash.config.option.enabled": "Activé",
-	"stash.config.option.generative-multilingual-2023": "Modèle privé multilingue Nuclia",
+	"stash.config.option.generative-multilingual-2023": "Mode sans génération",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
 	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
