--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -681,12 +681,12 @@
 	"stash.config.key.azure_openai": "Chave OpenAI do Azure",
 	"stash.config.key.openai": "Chave OpenAI",
 	"stash.config.option.anthropic": "Anthropic Claude",
-	"stash.config.option.chatgpt": "OpenAI ChatGPT",
-	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT",
+	"stash.config.option.chatgpt": "OpenAI ChatGPT-3.5",
+	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
 	"stash.config.option.cohere": "Cohere Command (beta)",
 	"stash.config.option.disabled": "Desativado",
 	"stash.config.option.enabled": "Ativado",
-	"stash.config.option.generative-multilingual-2023": "Modelo privado multilíngue Nuclia",
+	"stash.config.option.generative-multilingual-2023": "Modo sem geração",
 	"stash.config.option.multilingual-2023-08-16": "multilíngue (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
 	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
