--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -680,12 +680,12 @@
 	"stash.config.key.azure_openai": "Azure OpenAI key",
 	"stash.config.key.openai": "OpenAI key",
 	"stash.config.option.anthropic": "Anthropic Claude",
-	"stash.config.option.chatgpt": "OpenAI ChatGPT",
-	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT",
+	"stash.config.option.chatgpt": "OpenAI ChatGPT-3.5",
+	"stash.config.option.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
 	"stash.config.option.cohere": "Cohere Command (beta)",
 	"stash.config.option.disabled": "Desactivat",
 	"stash.config.option.enabled": "Habilitat",
-	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
+	"stash.config.option.generative-multilingual-2023": "Mode sense generació",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Nuclia Atlas",
 	"stash.config.option.nuclia-etna-v1": "Nuclia Etna",
